--- a/src/scss/base/_type.scss
+++ b/src/scss/base/_type.scss
@@ -238,6 +238,13 @@ h6 {
 	}
 }
 
+.span-fw-medium-white {
+	span {
+		color: white;
+		font-weight: 500;
+	}
+}
+
 .fw-normal {
 	font-weight: 400;
 }
